--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,64 @@
-.gradle
-**/build/
-!src/**/build/
+# Maven
+target/
+target-ide/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+release.properties
 
-# Ignore Gradle GUI config
-gradle-app.setting
+# Gradle
+.gradle/
+build/
+#gradle/wrapper/gradle-wrapper.jar
+#gradlew
+#gradlew.bat
 
-# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
-!gradle-wrapper.jar
-
-# Avoid ignore Gradle wrappper properties
-!gradle-wrapper.properties
-
-# Cache of project
-.gradletasknamecache
-
-# Eclipse Gradle plugin generated files
-# Eclipse Core
+# Eclipse
 .project
-# JDT-specific (Eclipse Java Development Tools)
 .classpath
+.settings/
+bin/
+
+# IntelliJ
+.idea
+*.ipr
+*.iml
+*.iws
+
+# NetBeans
+nb-configuration.xml
+
+# Visual Studio Code
+.vscode
+.factorypath
+
+# OSX
+.DS_Store
+nohup.out
+out/
+.nfs**
+
+# Vim
+*.swp
+*.swo
+
+# patch
+*.orig
+*.rej
+
+# Local environment
+.env
+logs
+export
+
+# Python version from PYENV local
+.python-version
+
+# Ignore generated pom.xml
+/.git-versioned-pom.xml
+
+# Ignore Gradle project-specific cache directory
+.gradle
+
+# Ignore Gradle build output directory
+build
